# goit-pythonweb-hw-08

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/services/: contacts.py
