[project]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Maryna Kindras",email = "maryna.kindras@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "alembic>=1.12.1",
    "email-validator>=2.1.0",
    "psycopg2-binary>=2.9.9",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
